--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -1,7 +1,19 @@
 .app {
   display: flex;
-  min-height: 100vh;
+  height: 100vh; 
+  width: 100vw;
   background-color: #111827;
+  padding: 0; 
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.dashboard-container {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .left-section {
