--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -27,10 +28,13 @@ a:hover {
 
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: stretch;
 }
 
 h1 {
